Fix z-index

--- a/war/src/main/less/modules/notifications.less
+++ b/war/src/main/less/modules/notifications.less
@@ -15,7 +15,7 @@
               0 10px 30px rgba(darken(#024cb6, 50%), 0.25),
               0 0 30px 5px var(--background);
   will-change: opacity, transform;
-  z-index: 1;
+  z-index: 999;
   cursor: pointer;
   transition: filter var(--standard-transition);
 
